fix overflow-x of mobile nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
 }
 
 body {
@@ -14,7 +13,12 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+/* Hide the mobile nav bar overflow */
+.wrapper {
   overflow-x: hidden;
+  position: relative;
 }
 
 .container {
